# ai-newsroom-crm-check

./: .gitignore  Dockerfile  README.md  RUNBOOK-sonnet-pipeline.md  docker-compose.yml  pyproject.toml
docs/: konzept-patch-2026-06-29-vault-diff.md
src/crm_check/: cli.py  config.py  normalize.py  parser.py  sonnet_check.py
src/crm_check/graph/: build.py  claims_mapping.py  match_gate.py  scoring.py  state.py
src/crm_check/graph/nodes/: ceq_lookup.py  correlate_node.py  hugoplus_lookup.py  kg_lobby_lookup.py  kg_lookup.py  lookup_nodes.py  ni_lookup.py  normalize_node.py  openregister_node.py  parse_node.py  press_relations_lookup.py  reason_node.py  verify_node.py  websearch_node.py  wikidata_node.py
src/crm_check/output/: excel_writer.py
tests/: test_ceq_lookup.py  test_correlate.py  test_hugoplus.py  test_kg_lookup.py  test_match_gate.py  test_nor.py  test_normalize.py  test_parser.py  test_press_relations.py  test_scoring.py
tests/fixtures/: kg_seed.sql
