[project]
name = "crm-check"
version = "0.1.0a0"
description = "Agentic CRM-Mailing-Listen-Aktualitätscheck gegen die ai-newsroom Entity-Intelligence (kg.person_universe + ceq-api + news-intelligence)"
authors = [{ name = "Gunter Nowy", email = "gunter.nowy@almagenic.com" }]
requires-python = ">=3.12"
dependencies = [
    "openpyxl>=3.1",
    "asyncpg>=0.30",
    "click>=8.1",
    "python-dotenv>=1.0",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "httpx>=0.28",
    "langgraph>=0.2",
    "openregister-sdk>=0.1.0",
    "anthropic>=0.40",
]

[project.optional-dependencies]
service = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "httpx>=0.28",
    "langgraph>=0.2",
    "openai>=1.50",
    "pyjwt>=2.9",
    "python-multipart>=0.0.12",
]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=6.0",
    "ruff>=0.8",
]

[project.scripts]
crm-check = "crm_check.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/crm_check"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-ra -q --strict-markers"
markers = [
    "integration: hits a live PG/HTTP dependency — requires docker-compose up + env vars",
]

[tool.coverage.run]
source = ["src/crm_check"]
branch = true

[tool.coverage.report]
fail_under = 80
show_missing = true

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]
